creating new structure

--- a/src/app/answer/answer-create/answer-create.component.html
+++ b/src/app/answer/answer-create/answer-create.component.html
@@ -16,7 +16,7 @@
       <label>is correct</label>
       <input type="text" formControlName="is_correct"  class="form-control">
     </div>
-
-    <button (click)="onSubmit()" class="btn btn-success">Update</button>
+    <button (click)="goBack()" class="btn btn-secondary">Back</button>
+    <button (click)="onSubmit()" class="btn btn-success ml-2">Update</button>
   </form>
 </div>
