--- a/src/app/item/item-create/item-create.component.html
+++ b/src/app/item/item-create/item-create.component.html
@@ -37,6 +37,7 @@
                   <label>Inventory id</label>
                   <input type="text" formControlName="inventories" class="form-control">
             </div> -->
-            <button (click)="onUpload()" class="btn btn-success">create</button>
+            <button (click)="goBack()" class="btn btn-secondary">Back</button>
+            <button (click)="onUpload()" class="btn btn-success ml-2">create</button>
       </form>
 </div>
