--- a/src/app/learning-topic/learning-topic-create/learning-topic-create.component.html
+++ b/src/app/learning-topic/learning-topic-create/learning-topic-create.component.html
@@ -1,8 +1,7 @@
-
 <h2>add Learning Topic</h2>
 <div class="container-fluid">
   <form [formGroup]="addForm">
-    
+
     <div class="form-group">
       <label>question category id </label>
       <input type="text" formControlName="question_category_id" class="form-control">
@@ -15,14 +14,9 @@
 
     <div class="form-group">
       <label>learning_topic_image</label>
-<!--       <input type="learning_topic_image" formControlName="learning_topic_image" name="learning_topic_image" class="form-control" id="learning_topic_image"> -->
-    <input type="file" (change)="onFileChanged($event)" class="form-control">
-<!--     <input 
-      style="display: none" 
-      type="file" (change)="onFileChanged($event)"> -->
-<!--     <button (click)="fileInput.click()">Select File</button> -->
-<!--     <button (click)="onUpload()">Upload!</button> -->
+      <input type="file" (change)="onFileChanged($event)" class="form-control">
     </div>
-    <button (click)="onUpload()" class="btn btn-success">Create</button>
+    <button (click)="goBack()" class="btn btn-secondary">Back</button>
+    <button (click)="onUpload()" class="btn btn-success ml-2">Create</button>
   </form>
 </div>
