--- a/src/app/question-category/question-category-create/question-category-create.component.html
+++ b/src/app/question-category/question-category-create/question-category-create.component.html
@@ -6,7 +6,7 @@
       <label for="question_category_name">question category name</label>
       <input type="text" formControlName="question_category_name" class="form-control">
     </div>
-
-    <button (click)="onSubmit()" class="btn btn-success" type="submit">Create</button>
+    <button (click)="goBack()" class="btn btn-secondary">Back</button>
+    <button (click)="onSubmit()" class="btn btn-success ml-2" type="submit">Create</button>
   </form>
 </div>
