--- a/src/app/challenge/challenge-create/challenge-create.component.html
+++ b/src/app/challenge/challenge-create/challenge-create.component.html
@@ -51,7 +51,7 @@
       <label>questionDifficulty</label>
       <input formControlName="questionDifficulty" class="form-control" type="text">
     </div>
-
-    <button (click)="onUpload()" class="btn btn-success">Create</button>
+    <button (click)="goBack()" class="btn btn-secondary">Back</button>
+    <button (click)="onUpload()" class="btn btn-success ml-2">Create</button>
   </form>
 </div>
