--- a/src/app/learning-item/learning-item-create/learning-item-create.component.html
+++ b/src/app/learning-item/learning-item-create/learning-item-create.component.html
@@ -25,6 +25,7 @@
       <label>learning_item_image </label>    
       <input type="file" (change)="onFileChanged($event)" class="form-control">
     </div>
-    <button (click)="onUpload()" class="btn btn-success">Update</button>
+    <button (click)="goBack()" class="btn btn-secondary">Back</button>
+    <button (click)="onUpload()" class="btn btn-success ml-2">Update</button>
   </form>
 </div>
