--- a/src/app/item/item-create/item-create.component.html
+++ b/src/app/item/item-create/item-create.component.html
@@ -3,7 +3,13 @@
       <form [formGroup]="addForm">
             <div class="form-group">
                   <label>item category id</label>
-                  <input type="text" formControlName="item_category_id" class="form-control">
+                  <!-- <input type="text" formControlName="item_category_id" class="form-control"> -->
+                  <select formControlName="item_category_id" class="form-control">
+                        <option value="">-- choose an option --</option>
+                        <option *ngFor="let i of itemCategories" value="{{i.id}}">
+                              {{i.item_category_name}}
+                        </option>
+                  </select>
             </div>
             <div class="form-group">
                   <label>name</label>
@@ -19,7 +25,12 @@
             </div>
             <div class="form-group">
                   <label>gender</label>
-                  <input type="text" formControlName="gender" class="form-control">
+                  <!-- <input type="text" formControlName="gender" class="form-control"> -->
+                  <select formControlName="gender" class="form-control">
+                        <option value="">-- choose an option --</option>
+                        <option value='0'> Cowok </option>
+                        <option value='1'> Cewek </option>
+                  </select>
             </div>
             <div class="form-group">
                   <label>image</label>
