--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,7 @@
+<mat-sidenav-container class="example-container" >
+  <mat-sidenav mode="side" opened>Sidenav content</mat-sidenav>
+  
+  <mat-sidenav-content>Main content
 <div style="text-align:center">
   <h1>
     Welcome to {{ title }}!
@@ -18,3 +22,5 @@
 
 <!-- <app-heroes></app-heroes> -->
 <router-outlet></router-outlet>
+</mat-sidenav-content>
+</mat-sidenav-container>
