--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,5 @@
+@import "~@angular/material/prebuilt-themes/indigo-pink.css";
+
 /* You can add global styles to this file, and also import other style files */
 table {
     font-family: arial, sans-serif;
@@ -47,3 +49,5 @@ nav a:hover {
 nav a.active {
   color: #039be5;
 }
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
