fixing admin design

--- a/src/app/answer/answer-show/answer-show.component.html
+++ b/src/app/answer/answer-show/answer-show.component.html
@@ -1,11 +1,8 @@
-<h2>My Answers</h2>
-
-<div>
-  <!--   (click) passes input value to add() and then clears the input -->
-  <button routerLink="/answers-create" class="btn btn-success ml-2">
+<div class="container">
+  <button routerLink="/answers-create" class="btn btn-success">
     add answer
   </button>
-</div>
+  <h2>My Answers</h2>
 
 <table>
   <tr>
@@ -30,3 +27,4 @@
     </td>
   </tr>
 </table>
+</div>
