--- a/src/app/learning-topic/learning-topic-show/learning-topic-show.component.html
+++ b/src/app/learning-topic/learning-topic-show/learning-topic-show.component.html
@@ -1,10 +1,8 @@
-<h2>E - Kita Learning Topic</h2>
-<div>
-  <!--   (click) passes input value to add() and then clears the input -->
-  <button routerLink="/learning-topics-create" class="btn btn-success ml-2">
+<div class="container">
+  <button routerLink="/learning-topics-create" class="btn btn-success">
     add Learning Topic
   </button>
-</div>
+  <h2>E - Kita Learning Topic</h2>
 <table>
   <tr>
     <th>id</th>
@@ -26,3 +24,4 @@
     </td>
   </tr>
 </table>
+</div>
