--- a/src/app/question-difficulty/question-difficulty-index/question-difficulty.component.html
+++ b/src/app/question-difficulty/question-difficulty-index/question-difficulty.component.html
@@ -1,24 +1,24 @@
-<h2>E - Kita Question Difficulties</h2>
-<div>
-    <!--   (click) passes input value to add() and then clears the input -->
-    <button routerLink="/question-difficulties-create" class="btn btn-success ml-2">
-      add Question Difficulty
-    </button>
-  </div>
-<table>
-  <tr>
-    <th>id</th>
-    <th>difficulty</th>
-    <th>Action</th>
-  </tr>
-  <tr *ngFor="let level of levels">
-    <td>{{level.id}}</td>
-    <td>{{level.question_difficulty_name}}</td>
-    <td>
-      <a routerLink="/question-difficulties/{{level.id}}">
-        <button class="btn btn-primary"> Update</button>
-      </a>
-      <button class="btn btn-danger ml-2" (click)="delete(level)"> Delete</button>
-    </td>
-  </tr>
-</table>
+<div class="container">
+  <button routerLink="/question-difficulties-create" class="btn btn-success">
+    add Question Difficulty
+  </button>
+  <h2>E - Kita Question Difficulties</h2>
+
+  <table>
+    <tr>
+      <th>id</th>
+      <th>difficulty</th>
+      <th>Action</th>
+    </tr>
+    <tr *ngFor="let level of levels">
+      <td>{{level.id}}</td>
+      <td>{{level.question_difficulty_name}}</td>
+      <td>
+        <a routerLink="/question-difficulties/{{level.id}}">
+          <button class="btn btn-primary"> Update</button>
+        </a>
+        <button class="btn btn-danger ml-2" (click)="delete(level)"> Delete</button>
+      </td>
+    </tr>
+  </table>
+</div>
