--- a/src/app/learning-item/learning-item-index/learning-item-index.component.html
+++ b/src/app/learning-item/learning-item-index/learning-item-index.component.html
@@ -1,11 +1,10 @@
-<h2>E - Kita learning Items</h2>
-<div>
-  <!--   (click) passes input value to add() and then clears the input -->
-  <button routerLink="/learning-items-create" class="btn btn-success ml-2">
+<div class="container">
+  <button routerLink="/learning-items-create" class="btn btn-success">
     add Learning Item
   </button>
-</div>
-<table>
+  <h2>E - Kita learning Items</h2>
+
+  <table>
   <tr>
     <th>id</th>
     <th>topic id</th>
@@ -28,3 +27,4 @@
     </td>
   </tr>
 </table>
+</div>
