--- a/src/styles.css
+++ b/src/styles.css
@@ -1,10 +1,12 @@
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
 
 /* You can add global styles to this file, and also import other style files */
-table {
+/* table {
     font-family: arial, sans-serif;
     border-collapse: collapse;
-    width: 100%;
+    margin: 2%;
+    padding: 2%;
+    width: 90%;
 }
 
 td, th {
@@ -15,9 +17,22 @@ td, th {
 
 tr:nth-child(even) {
     background-color: #dddddd;
+} */
+table {
+  border-collapse: collapse;
+  width: 100%;
 }
-h2 {
-  text-align: center;
+
+th, td {
+  text-align: left;
+  padding: 8px;
+}
+
+tr:nth-child(even){background-color: #f2f2f2}
+
+th {
+  background-color: #4CAF50;
+  color: white;
 }
 
 /* AppComponent's private CSS styles */
@@ -30,24 +45,7 @@ h2 {
   font-size: 2em;
   margin-top: 0;
   padding-top: 0;
-}
-nav a {
-  padding: 5px 10px;
-  text-decoration: none;
-  margin-top: 10px;
-  display: inline-block;
-  background-color: #eee;
-  border-radius: 4px;
-}
-nav a:visited, a:link {
-  color: #607d8b;
-}
-nav a:hover {
-  color: #039be5;
-  background-color: #cfd8dc;
-}
-nav a.active {
-  color: #039be5;
+  text-align: center;
 }
 html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; padding: 30pt; }
