--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,14 +1,24 @@
-<form class="example-form">
-       <table class="example-full-width" cellspacing="0">
-         <tr>
-           <td>
-             <input placeholder="Username" [(ngModel)]="username" name="username" required>
-           </td>
-         </tr>
-         <tr>
-         <td>
-           <input placeholder="Password" [(ngModel)]="password"type="password" name="password" required>
-       </td>
-       </tr></table>
-     </form>
-<button (click)="login()" color="primary">Login</button>
+<div id="back">
+  <div class="backLeft"></div>
+</div>
+
+<div id="slideBox">
+  <div class="topLayer">
+    <div class="right">
+      <div class="content">
+        <h2>Login Admin E-Kita</h2>
+        <form method="post" onsubmit="return false;">
+          <div>
+            <label>Username : </label>
+            <input type="text" [(ngModel)]="username" name="username" required>
+          </div>
+          <div>
+            <label>Password : </label>
+            <input type="password" [(ngModel)]="password" name="password" required>
+          </div>
+          <button (click)="login()">Login</button>
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
