adding dropdown list at create question category

--- a/src/app/challenge/challenge-detail/challenge-detail.component.html
+++ b/src/app/challenge/challenge-detail/challenge-detail.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="challenge" class="container-fluid">
+<div *ngIf="challenge" class="container">
   <div>
     <h2>update challenge id : {{challenge.id}}</h2>
   </div>
