--- a/src/app/challenge/challenge-create/challenge-create.component.html
+++ b/src/app/challenge/challenge-create/challenge-create.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<div class="container">
   <h2 class="text-center">Add Challenge</h2>
   <form [formGroup]="addForm">
 
