--- a/src/app/question-category/question-category-create/question-category-create.component.html
+++ b/src/app/question-category/question-category-create/question-category-create.component.html
@@ -1,10 +1,24 @@
 <h2>add Question Category</h2>
-<div class="container-fluid">
+<div class="container">
   <form [formGroup]="addForm">
-
+    <div class="form-group">
+      <label>Difficulty</label>
+      <!-- <input type="text" formControlName="item_category_id" class="form-control"> -->
+      <select formControlName="question_difficulty_id" class="form-control">
+            <option value="">-- choose level --</option>
+            <option *ngFor="let i of questionDifficulties" value="{{i.id}}">
+                  {{i.question_difficulty_name}}
+            </option>
+      </select>
+    </div>
     <div class="form-group">
       <label for="question_category_name">question category name</label>
       <input type="text" formControlName="question_category_name" class="form-control">
+    </div>
+
+    <div class="form-group">
+      <label for="star_needed">Star Needed</label>
+      <input type="text" formControlName="star_needed" class="form-control">
     </div>
     <button (click)="goBack()" class="btn btn-secondary">Back</button>
     <button (click)="onSubmit()" class="btn btn-success ml-2" type="submit">Create</button>
