--- a/src/app/question-category/question-category-index/question-category.component.html
+++ b/src/app/question-category/question-category-index/question-category.component.html
@@ -7,11 +7,13 @@
   <table>
     <tr>
       <th>id</th>
+      <th>level</th>
       <th>name</th>
       <th>action</th>
     </tr>
     <tr *ngFor="let l of categories">
       <td>{{l.id}}</td>
+      <td>{{l.questionDifficulty?.question_difficulty_name}}</td>
       <td>{{l.question_category_name}}</td>
       <td>
         <a routerLink="/question-categories/{{l.id}}">
