adding dropdown list at create learning topic

--- a/src/app/learning-item/learning-item-index/learning-item-index.component.html
+++ b/src/app/learning-item/learning-item-index/learning-item-index.component.html
@@ -7,7 +7,7 @@
   <table>
   <tr>
     <th>id</th>
-    <th>topic name</th>
+    <th>learning topic</th>
     <th>item xp</th>
     <th>title</th>
     <th>image</th>
