--- a/src/app/user/user-show/user-show.component.html
+++ b/src/app/user/user-show/user-show.component.html
@@ -30,9 +30,9 @@
     <td>{{user.star_gained}}</td>
     <td>{{user.xp_gained}}</td>
     <td>
-      <a routerLink="/users/{{user.id}}">
+      <!-- <a routerLink="/users/{{user.id}}">
         <button class="btn btn-primary"> Update</button>
-      </a>
+      </a> -->
       <button class="btn btn-danger ml-2" (click)="deleteUser(user)"> Delete</button>
     </td>
   </tr>
