--- a/src/app/item/item-create/item-create.component.html
+++ b/src/app/item/item-create/item-create.component.html
@@ -1,35 +1,35 @@
-<div class="container-fluid">
+<div class="container">
       <h2>add New Item</h2>
       <form [formGroup]="addForm">
             <div class="form-group">
                   <label>item category id</label>
                   <!-- <input type="text" formControlName="item_category_id" class="form-control"> -->
                   <select formControlName="item_category_id" class="form-control">
-                        <option value="">-- choose an option --</option>
+                        <option value="">-- choose an Item Category --</option>
                         <option *ngFor="let i of itemCategories" value="{{i.id}}">
                               {{i.item_category_name}}
                         </option>
                   </select>
             </div>
             <div class="form-group">
-                  <label>name</label>
+                  <label>Item name</label>
                   <input type="text" formControlName="name" class="form-control">
             </div>
             <div class="form-group">
-                  <label>item desc</label>
+                  <label>Item desc</label>
                   <input type="text" formControlName="item_desc" class="form-control">
             </div>
             <div class="form-group">
-                  <label>star</label>
+                  <label>Item star</label>
                   <input type="text" formControlName="star" class="form-control">
             </div>
             <div class="form-group">
-                  <label>gender</label>
+                  <label>Item gender</label>
                   <!-- <input type="text" formControlName="gender" class="form-control"> -->
                   <select formControlName="gender" class="form-control">
-                        <option value="">-- choose an option --</option>
-                        <option value='0'> Cowok </option>
-                        <option value='1'> Cewek </option>
+                        <option value="">-- choose a Gender --</option>
+                        <option value='0'> Male </option>
+                        <option value='1'> Female </option>
                   </select>
             </div>
             <div class="form-group">
