--- a/src/app/learning-topic/learning-topic-create/learning-topic-create.component.html
+++ b/src/app/learning-topic/learning-topic-create/learning-topic-create.component.html
@@ -1,10 +1,14 @@
 <h2>add Learning Topic</h2>
-<div class="container-fluid">
+<div class="container">
   <form [formGroup]="addForm">
-
     <div class="form-group">
-      <label>question category id </label>
-      <input type="text" formControlName="question_category_id" class="form-control">
+      <label>Difficulty</label>
+      <select formControlName="question_category_id" class="form-control">
+            <option value="">-- choose Category --</option>
+            <option *ngFor="let i of questionCategories" value="{{i.id}}">
+                  {{i.question_category_name}}
+            </option>
+      </select>
     </div>
 
     <div class="form-group">
