fixing some bugs

--- a/src/app/item/item-detail/item-detail.component.html
+++ b/src/app/item/item-detail/item-detail.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="item" class="container-fluid">
+<div *ngIf="item" class="container">
   <div>
     <h2>Update Item Id : {{item.id}}</h2>
   </div>
