--- a/src/app/learning-item/learning-item-detail/learning-item-detail.component.html
+++ b/src/app/learning-item/learning-item-detail/learning-item-detail.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="learningItem" class="container-fluid">
+<div *ngIf="learningItem" class="container">
   <div>
       <h2>Update Learning Item id : {{learningItem.id}}</h2>
 </div>
