--- a/src/app/challenge/challenge-create/challenge-create.component.html
+++ b/src/app/challenge/challenge-create/challenge-create.component.html
@@ -4,7 +4,6 @@
 
     <div class="form-group">
       <label>question_difficulty_id</label>
-      <!-- <input formControlName="question_difficulty_id" class="form-control" type="text"> -->
       <select formControlName="question_difficulty_id" class="form-control">
         <option *ngFor="let qd of questionDifficulties" value="{{qd.id}}">
           {{qd.question_difficulty_name}}
@@ -47,10 +46,10 @@
       <input formControlName="challenge_type" class="form-control" type="text">
     </div>
 
-    <div class="form-group">
+    <!-- <div class="form-group">
       <label>questionDifficulty</label>
       <input formControlName="questionDifficulty" class="form-control" type="text">
-    </div>
+    </div> -->
     <button (click)="goBack()" class="btn btn-secondary">Back</button>
     <button (click)="onUpload()" class="btn btn-success ml-2">Create</button>
   </form>
