--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<mat-sidenav-container class="example-container" (backdropClick)="close('backdrop')">
+<!-- <mat-sidenav-container class="example-container" (backdropClick)="close('backdrop')">
   <mat-sidenav #sidenav (keydown.escape)="close('escape')" disableClose>
     <p><button mat-button (click)="close('toggle button')"> <i class="material-icons">
         arrow_back 
@@ -90,9 +90,55 @@
       <i class="material-icons">
         arrow_forward
         </i> 
-      </button></p>
+      </button></p> -->
 
-    <router-outlet></router-outlet>
-
-  </mat-sidenav-content>
-</mat-sidenav-container>
+      <!-- starting heading -->
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <a routerLink="/" class="navbar-brand">English Kids Talks</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse">
+          <span class="navbar-toggle-icon"></span>
+        </button>
+      
+        <div class="collapse navbar-collapse" id="navbarSupportedCOntent">
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item">
+              <a class="nav-link" routerLink="/dashboard" routerLinkActive="active">Dashboard</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" routerLink="/users" routerLinkActive="active">User</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" routerLink="/items" routerLinkActive="active">Item</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" routerLink="/question-difficulties" routerLinkActive="active">Difficulty</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" routerLink="/question-categories" routerLinkActive="active">Category</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" routerLink="/learning-topics" routerLinkActive="active">Topic</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" routerLink="/learning-items" routerLinkActive="active">Learning</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" routerLink="/challenges" routerLinkActive="active">Challenge</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" routerLink="/answers" routerLinkActive="active">Answer</a>
+            </li>
+          </ul>
+          <ul class="navbar-nav">
+            <a class="nav-link" routerLink="/login" routerLinkActive="active">Login</a>
+            <a class="nav-link" routerLink="/register" routerLinkActive="active">Register</a>
+            <!-- <a class="nav-link" style="cursor:pointer" (click)="auth.logoutUser()">Logout</a> -->
+          </ul>
+        </div>
+      </nav>
+      <div class="container">
+        <router-outlet></router-outlet>
+      </div>
+      <!-- end of heading -->
+  <!-- </mat-sidenav-content>
+</mat-sidenav-container> -->
