fixing the navbar

--- a/src/app/learning-item/learning-item-index/learning-item-index.component.html
+++ b/src/app/learning-item/learning-item-index/learning-item-index.component.html
@@ -5,7 +5,7 @@
   <h2>E - Kita learning Items</h2>
 
   <table>
-  <tr>
+  <tr class="tr">
     <th>id</th>
     <th>learning topic</th>
     <th>item xp</th>
