--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,22 +1,20 @@
-<div id="back">
-  <div class="backLeft"></div>
-</div>
-
-<div id="slideBox">
-  <div class="topLayer">
-    <div class="right">
-      <div class="content">
-        <h2>Login Admin E-Kita</h2>
-        <form method="post" onsubmit="return false;">
-          <div>
-            <label>Username : </label>
-            <input type="text" [(ngModel)]="username" name="username" required>
+<div class="row pt-5">
+  <div class="col-md-6 mx-auto">
+    <div class="card rounded-0">
+      <div class="card-header">
+        <h3 class="mb-0">Login</h3>
+      </div>
+      <div class="card-body">
+        <form class="form">
+          <div class="form-group">
+            <label for="">Username</label>
+            <input [(ngModel)]="loginUserData.username" name="username" type="text" class="form-control rounded-0">
           </div>
-          <div>
-            <label>Password : </label>
-            <input type="password" [(ngModel)]="password" name="password" required>
+          <div class="form-group">
+            <label for="">Password</label>
+            <input [(ngModel)]="loginUserData.password" name="password" type="password" class="form-control rounded-0">
           </div>
-          <button (click)="login()">Login</button>
+          <button (click)="loginUser()" class="btn btn-success float-right">Login</button>
         </form>
       </div>
     </div>
